# claude-deploy-skill

./: README.md  SKILL.md  claude-deploy  claude-deploy.sh  context.md  gh-app-token.sh  run-038d0671-20260328T003236-006b  run-038d0671-20260328T003402-c140  run-038d0671-20260328T003452-8727  run-038d0671-20260328T003531-a772  run-038d0671-20260328T003614-92ca  run-038d0671-20260328T003712-5be9  run-038d0671-20260328T003755-39a4  run-038d0671-20260328T003838-b6d2  run-038d0671-20260328T003950-82a2  run-038d0671-20260328T004207-af16  run-43e256c2-20260328T024250-34c6  run-43e256c2-20260328T024250-ae19  run-43e256c2-20260328T024500-1c44  run-43e256c2-20260328T024500-513f  run-43e256c2-20260328T024613-0d8c  run-43e256c2-20260328T024613-c4e0  run-4fe965db-20260327T040857-8ad6  run-5bbda0ff-20260327T035858-6be3  run-6246cf54-20260327T043134-fa2a  run-6a7746e4-20260328T035506-d8ef  run-71675cb7-20260327T035339-fbc0  run-737a9e7f-20260327T044434-d26e  run-7aa23b9d-20260327T040508-99c5  run-86ff826b-20260327T042122-541f  run-8779688e-20260328T025924-7139  run-8779688e-20260328T030147-e9d3  run-87dea99d-20260327T040239-560d  run-8f514b97-20260328T032746-3622  run-8f7d5fe2-20260328T034547-190b  run-b0265b40-20260327T040150-c0f3  run-b9b85f47-20260327T041414-4ab6  run-c5130951-20260327T055548-f97b  run-cfcd09ff-20260327T043505-c519  run-d117fde1-20260328T073351-1b3f  (+3 more)
completions/: claude-deploy.bash
docs/: session-handover.md
sentinel/: Cargo.toml
sentinel/src/: backend.rs  github_token.rs  main.rs  sentinel.rs
sentinel/src/commands/: create.rs  mod.rs  prune.rs  queue.rs  reap.rs  watch.rs
(+11 files in other folders)
