[package]
name = "claude-deploy-sentinel"
version = "0.1.0"
edition = "2021"
description = "Sentinel queue manager for claude-deploy — watch, queue, prune, create"
repository = "https://github.com/fluid-notion-labs/claude-deploy-skill"
license = "MIT"

[[bin]]
name = "claude-sentinel"
path = "src/main.rs"

[dependencies]
clap    = { version = "4", features = ["derive"] }
tokio   = { version = "1", features = ["full"] }
anyhow  = "1"
thiserror = "1"
chrono  = { version = "0.4", features = ["serde"] }
colored = "2"
rand    = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
